attempt to fix title wrapping issue on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,9 @@
   top: 0px;
   left: 0px;
 }
+.title {
+  white-space: nowrap;
+}
 /*.side-nav {
   left: 0px;
   margin-top: 64px;
